tests/data-clumps/test-cases/parameter-parameter/classes-with-implemented-interfaces/positive/typescript/source/MyUnsupportedCardReader.ts
import {
  MyCardReaderInterface
} from "./MyCardReaderInterface";

export class MyUnsupportedCardReader implements MyCardReaderInterface {

  readCard(callBack: (answer: (string | undefined)) => Promise<void>, showInstruction: () => void, hideInstruction: () => void, nfcInstruction: string): Promise<void> {
    return Promise.resolve(undefined);
  }

  readCardDublicate(a: string, b: string, c: string): void {
    return;
  }
}
