tests/data-clumps/test-cases/parameter-parameter/classes-with-implemented-interfaces/negative/typescript/source/MyCardReaderInterface.ts
export interface MyCardReaderInterface {
  readCard(callBack: (answer: string | undefined) => Promise<void>, showInstruction: () => void, hideInstruction: () => void, nfcInstruction: string): Promise<void>;
}
